############2015-11-07#####################
alter table supplychain_supply_schedule_manage_detail add column design_take_over varchar(32) default "nottakeover" NOT NULL;
alter table supplychain_supply_schedule_manage_detail add column design_person varchar(32) null;
############2015-10-07#####################
alter table supply_chain_stats_daily add return_pro int(11) default 0;
############2015-10-30###################
alter table pay_coupon_template add use_fee double Not null;
########### 2015-10-24########### 2015-10-28 ################# #################
alter table supply_chain_stats_daily  add fahuo_num int(11) default 0;
########### 2015-10-24########### 2015-10-20 ################# #################
alter table shop_items_product add column offshelf_time datetime DEFAULT NULL;
########### 2015-10-20 #################
alter table supplychain_hot_product add column proid int(11) default 0;
########### 2015-10-19 #################
alter table supplier_sale_product_praise add column pro_from int(11) default 0;
alter table supplychain_supply_product add voting boolean NOT NULL default False;
############2015-10-13######################
alter table xiaolumm_xiaolumama add lowest_uncoushout double Not null;
############2015-10-9#####################
alter table flashsale_register  add initialize_pwd tinyint(1) default 0 NOT NULL;
############2015-10-8#####################
alter table flashsale_dinghuo_returngoods add status int(11) default 0;
############2015-10-07#####################
alter table shop_items_productsku add sku_inferior_num int(11) default 0;
############2015-10-04######################
alter table xiaolumm_xiaolumama add column modified datetime NOT NULL;
############2015-9-28######################
alter table xiaolumm_xiaolumama add target_complete double Not null;
########### 2015-9-25################
alter table pay_coupon_template add column limit_num int(11) default 1;
########### 2015-9-18 #################