@@ -4,6 +4,9 @@
 """
 from django.db import models
 from django.db.models import Sum
+from shopback.items.models import Product
+from shopback.items.models import ProductDaySale
+from flashsale.pay.models_refund import SaleRefund
 
 
 class PayRefundRate(models.Model):
@@ -60,6 +63,8 @@ class ProRefunRcord(models.Model):
     ref_num_out = models.IntegerField(default=0, verbose_name=u'24h外未发货申请数')
     ref_num_in = models.IntegerField(default=0, verbose_name=u'24h内未发货申请数')
     ref_sed_num = models.IntegerField(default=0, verbose_name=u'发货后申请数')
+    contactor = models.BigIntegerField(default=0, db_index=True, verbose_name=u'接洽人')
+    pro_model = models.BigIntegerField(default=0, db_index=True, verbose_name=u'产品款式id')
     created = models.DateTimeField(auto_now_add=True, verbose_name=u'创建日期')
     modified = models.DateTimeField(auto_now=True, verbose_name=u'修改日期')
 
@@ -71,15 +76,7 @@ class ProRefunRcord(models.Model):
     def __unicode__(self):
         return u"%s" % self.product
 
-    def sale_num(self):
-        """ 返回该产品的销售数量　"""
-        from shopback.items.models import ProductDaySale
-        sale = ProductDaySale.objects.filter(product_id=self.product)
-        sale_num = sale.aggregate(total_sale=Sum('sale_num')).get("total_sale") or 0
-        return sale_num
-
     def item_product(self):
-        from shopback.items.models import Product
         try:
             pro = Product.objects.get(id=self.product)
         except Product.DoesNotExist:
@@ -87,34 +84,11 @@ class ProRefunRcord(models.Model):
         return pro
 
     def same_mod(self):
-        from shopback.items.models import Product
-        pro = self.item_product()
-        if pro is None:
-            return []
-        pro_ids = Product.objects.filter(model_id=pro.model_id).values('id')
+        pro_ids = Product.objects.filter(model_id=self.pro_model).values('id')
         return pro_ids
-
-    def same_mod_ref_num_out(self):
-        pro_ids = self.same_mod()
-        pro_rcds = ProRefunRcord.objects.filter(product__in=pro_ids)
-        mod_ref_num_out = pro_rcds.aggregate(total_out=Sum('ref_num_out')).get("total_out") or 0
-        return mod_ref_num_out
-
-    def same_mod_ref_num_in(self):
-        pro_ids = self.same_mod()
-        pro_rcds = ProRefunRcord.objects.filter(product__in=pro_ids)
-        mod_ref_num_in = pro_rcds.aggregate(total_in=Sum('ref_num_in')).get("total_in") or 0
-        return mod_ref_num_in
-
-    def same_mod_ref_num_sed(self):
-        pro_ids = self.same_mod()
-        pro_rcds = ProRefunRcord.objects.filter(product__in=pro_ids)
-        mod_ref_sed_num = pro_rcds.aggregate(total_sed=Sum('ref_sed_num')).get("total_sed") or 0
-        return mod_ref_sed_num
 
     def same_mod_sale_num(self):
         """ 同款销售数量　"""
-        from shopback.items.models import ProductDaySale
         sale = ProductDaySale.objects.filter(product_id__in=self.same_mod())
         sale_num = sale.aggregate(total_sale=Sum('sale_num')).get("total_sale") or 0
         return sale_num
@@ -122,7 +96,6 @@ class ProRefunRcord(models.Model):
     def reason_ana(self):
         """ 同款原因分析　"""
         pro_ids = self.same_mod()
-        from flashsale.pay.models_refund import SaleRefund
         sale_refunds = SaleRefund.objects.filter(item_id__in=pro_ids)
         reason = {}
         des = []
@@ -134,20 +107,6 @@ class ProRefunRcord(models.Model):
             des.append(ref.desc)
         info_base = {"reason": reason, "desc": des}
         return info_base
-
-    @property
-    def sale_buyer(self):
-        """ 选品买手　"""
-        from supplychain.supplier.models import SaleProduct
-        pro = self.item_product()
-        if pro is None:
-            return None
-        try:
-            sale_pro = SaleProduct.objects.get(id=pro.sale_product)
-            contactor = sale_pro.contactor.id
-        except SaleProduct.DoesNotExist:
-            contactor = None
-        return contactor
 
     def pro_pic(self):
         pro = self.item_product()
