@@ -1,4 +1,9 @@
 ############2015-11-07#####################
+alter table flashsale_pay_product_refund_record add column contactor bigint(20) NOT NULL DEFAULT 0;
+alter table flashsale_pay_product_refund_record add column pro_model bigint(20) NOT NULL DEFAULT 0;
+CREATE INDEX `flashsale_pay_product_refund_record_2c61ea09` ON `flashsale_pay_product_refund_record` (`contactor`);
+CREATE INDEX `flashsale_pay_product_refund_record_da20976f` ON `flashsale_pay_product_refund_record` (`pro_model`);
+############2015-11-07#####################
 alter table supplychain_supply_schedule_manage_detail add column design_take_over varchar(32) default "nottakeover" NOT NULL;
 alter table supplychain_supply_schedule_manage_detail add column design_person varchar(32) null;
 ############2015-10-07#####################
